--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,6 +1,10 @@
 {% include base_path %}
 
 <!-- start custom head snippets -->
+<!-- Google Fonts: Roboto (body) + Montserrat (headings/nav) -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 
 <!-- Support for Academicons -->
 <link rel="stylesheet" href="{{ base_path }}/assets/css/academicons.css"/>
