--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -41,3 +41,7 @@
     "vendor/font-awesome/solid",
     "vendor/font-awesome/brands"
 ;
+/* Make Google Scholar (Font Awesome icon) blue */
+.author__urls .scholar-icon {
+  color: #4285F4; /* Google blue */
+}
