--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -45,7 +45,7 @@
         <li><a href="{{ author.arxiv }}"><i class="ai ai-arxiv ai-fw icon-pad-right"></i>arXiv</a></li>
       {% endif %}      
       {% if author.googlescholar %}
-        <li><a href="{{ author.googlescholar }}"><i class="fas fa-graduation-cap fa-fw icon-pad-right scholar-icon" aria-hidden="true"></i>Google Scholar</a></li>
+        <li><a href="{{ author.googlescholar }}"><i class="fas fa-graduation-cap fa-fw icon-pad-right" aria-hidden="true"></i>Google Scholar</a></li>
       {% endif %}
       {% if author.inspire-hep %}
         <li><a href="{{ author.inspire-hep }}"><i class="ai ai-inspire ai-fw icon-pad-right"></i>INSPIRE-HEP</a></li>
